<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="24dp"
        android:text="@string/calculation_page_title"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CalculationValueInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrance_value_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entrancePrice"
            style="@style/CalculationValueEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CalculationValueInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_coin_cost_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost"
            style="@style/CalculationValueEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CalculationValueInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/planned_sell_coin_cost_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sellCost"
            style="@style/CalculationValueEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CalculationValueInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/converting_course_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/convertingCourse"
            style="@style/CalculationValueEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/bestPriceBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/minimalBestPriceLabel"
            style="@style/TextOutputLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/null_sell_price_label_text" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/minimalBestPrice"
            style="@style/TextOutputStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profitBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/scalpedValueLabel"
            style="@style/TextOutputLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profit_label_text" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/scalpedValue"
            style="@style/TextOutputStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/convertedBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/convertedPriceLabel"
            style="@style/TextOutputLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/converted_benefit_label_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/convertedPrice"
            style="@style/TextOutputStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>